--- a/src/app/components/users/student/attemptquiz/attemptquiz.component.html
+++ b/src/app/components/users/student/attemptquiz/attemptquiz.component.html
@@ -9,6 +9,101 @@
       >
     </div>
   </div>
+
+  <div class="row mt-4" *ngIf="showMarks">
+    <div class="col-sm-12">
+      <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header">
+            <label class="font-weight-bold">
+              {{ quiz ? quiz.title : '' }}
+            </label>
+          </div>
+          <div class="card-body">
+            <ol class="p-0">
+              <li
+                class="mb-4"
+                *ngFor="
+                  let question of quiz.questions;
+                  let questionNumber = index
+                "
+              >
+                <div>
+                  <div class="form-group mb-1 input-group">
+                    <p>{{ question.text }}</p>
+                  </div>
+                  <!-- <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          formControlName="type"
+                          value="mcq"
+                        />
+                        <label class="form-check-label">MCQ</label>
+                      </div> -->
+                  <!-- <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          formControlName="type"
+                          value="tf"
+                        />
+                        <label class="form-check-label">True/False</label>
+                      </div> -->
+                </div>
+
+                <div class="div" *ngIf="question.type == 'mcq'">
+                  <div
+                    class="div"
+                    *ngFor="let option of question.mcqOptions; let i = index"
+                  >
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <span
+                          class="mt-2"
+                          [ngClass]="{
+                            'text-success': i == question.mcqCorrectOption
+                          }"
+                          >{{ option.option }}</span
+                        >
+                      </label>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="div" *ngIf="question.type == 'tf'">
+                  <div class="form-check mr-4">
+                    <label class="form-check-label">
+                      <span
+                        class="mt-2"
+                        [ngClass]="{
+                          'text-success': question.tfCorrectOption == 'true'
+                        }"
+                        >True</span
+                      >
+                    </label>
+                  </div>
+                  <div class="form-check mr-4">
+                    <label class="form-check-label">
+                      <span
+                        class="mt-2"
+                        [ngClass]="{
+                          'text-success': question.tfCorrectOption == 'false'
+                        }"
+                        >False</span
+                      >
+                    </label>
+                  </div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Solve -->
   <div class="row mt-4" *ngIf="quiz" [hidden]="showMarks">
     <div class="col-sm-12">
       <div class="animated fadeIn">
