Academy Admin Updated

--- a/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
+++ b/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
@@ -17,13 +17,13 @@
       <div class="card text-white bg-dark">
         <div class="card-header h4 ">
           {{ request.data.userName }}
-          <button
+          <!-- <button
             class="btn btn-sm btn-outline-info float-right ml-2"
             matTooltip="View Profile"
             triggers="mouseenter:mouseleave"
           >
             <span><i class="fa fa-eye"></i> </span>
-          </button>
+          </button> -->
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
           
@@ -75,13 +75,13 @@
       <div class="card text-white bg-dark">
         <div class="card-header h4 ">
           {{ request.data.userName }}
-          <button
+          <!-- <button
             class="btn btn-sm btn-outline-info float-right ml-2"
             matTooltip="View Profile"
             triggers="mouseenter:mouseleave"
           >
             <span><i class="fa fa-eye"></i> </span>
-          </button>
+          </button> -->
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
           
@@ -133,13 +133,13 @@
       <div class="card text-white bg-dark">
         <div class="card-header h4 ">
           {{ request.data.userName }}
-          <button
+          <!-- <button
             class="btn btn-sm btn-outline-info float-right ml-2"
             matTooltip="View Profile"
             triggers="mouseenter:mouseleave"
           >
             <span><i class="fa fa-eye"></i> </span>
-          </button>
+          </button> -->
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
           
