--- a/src/app/components/users/academyadmin/classrooms/classrooms.component.html
+++ b/src/app/components/users/academyadmin/classrooms/classrooms.component.html
@@ -29,7 +29,7 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> ClassName :
+                <i class="icon-badge"></i> ClassName :
                 <strong> {{ classroom.data.class.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
@@ -37,7 +37,7 @@
                 <strong> {{ classroom.data.students.length }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Teacher :
+                <i class="icon-user"></i> Teacher :
                 <strong> {{ classroom.data.teacher.teacherName }} </strong>
               </li>
             </ul>
